--- a/_sass/components/_type.scss
+++ b/_sass/components/_type.scss
@@ -6,7 +6,7 @@ p {
 }
 h1 {
   font-size: 30px;
-  font-family: $font-family-heading;
+  font-family: $font-family-base;
   line-height: 1.2;
   margin-bottom: 20px;
   @include media-breakpoint-up(md) {
@@ -16,7 +16,7 @@ h1 {
 }
 h2 {
   font-size: 24px;
-  font-family: $font-family-heading;
+  font-family: $font-family-base;
   line-height: 1.4;
   margin-bottom: 10px;
   @include media-breakpoint-up(md) {
